# doggo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: fetch_data.py
src/doggo/data/: __init__.py
src/doggo_data/: __init__.py
